Release Notes - Clusterd
-----------------------------------------------

Release Notes - Clusterd - Version 1.11.0-0.5.0
-----------------------------------------------
This release contains the following highlights:

  * ADD: Support for Docker Engine >= v26
  * ADD: CGroupsV2 support to the mesos containerizer.
  * MERGE: Merge with Apache Mesos Upstream.
    


Release Notes - Clusterd - Version 1.11.0-0.4.0
-----------------------------------------------
This release contains the following highlights:

  * Docker Containerizer now supports CGroupsV2. It will be enabled by the Agent 
    flag "--enable_cgroupv2". If its enabled, currently it will break the mesos containerizer.
  * Cleanup repository and remove more unneeded files. 
  * Update glog to version 0.6.0.
  * Update libevent to version 2.1.12.
  * Move mesos-mini to it's own repository (https://github.com/m3scluster/mesos-mini).
  * Remove mesos-tidy and mesos-website builder.
  * Remove python dependencies and move the "new" mesos-cli to it's on repository 
    (https://github.com/AVENTER-UG/mesos-cli).
  * Remove the old mesos-cli.
  * Update zookeeper client to version 3.8.2.
  * Update libboost to version 1.83.0.
  * Change to C++14
  * Update jquery to version 3.7.1.
  * Change docker networking. If no docker network and no docker net attribute 
    was given, add default networking.
  * Cleanup CNI if the docker container exited due to an error.


Release Notes - Clusterd - Version 1.11.0-0.3.0
-----------------------------------------------
This release contains the following highlights:

  * Add CNI support for the Docker Executor.
  * Fix random SlaveRecoveryTest.PingTimeoutDuringRecovery test failure (Mesos upstream PR).
  * Fix Blkio isolator. handled missing CFQ statistics (Mesos upstream PR).
  * Fix mesos-tidy build with new gRPC version (Mesos upstream PR).
  * Update grpc to version 1.11.1
  * Add s390x support (Mesos upstream PR).


Release Notes - Mesos - Version 1.11.0