@@ -44,8 +44,8 @@ set(XZ_VERSION              "5.2.3")
 set(XZ_HASH                 "SHA256=22251D07AD9F25866F5FD785EE2A91DC9863A5BD47EAD4FD717A242612C8A13C")
 set(ZLIB_VERSION            "1.2.8")
 set(ZLIB_HASH               "SHA256=36658CB768A54C1D4DEC43C3116C27ED893E88B02ECFCB44F2166F9C0B7F2A0D")
-set(ZOOKEEPER_VERSION       "3.8.2")
-set(ZOOKEEPER_HASH          "SHA256=86c3b6a7bc25d65ad6f40c2f5300b9334b15fa5329ab9815910d466dcdb3fd11")
+set(ZOOKEEPER_VERSION       "3.9.2")
+set(ZOOKEEPER_HASH          "SHA256=f9ea55c334ea51dcc56409640924c8980f11a875023cd57f0c61c4b1eb61f536")
 set(GLOG_VERSION            "0.6.0")
 set(GLOG_HASH               "SHA256=8a83bf982f37bb70825df71a9709fa90ea9f4447fb3c099e1d720a439d88bad6")
 set(RE2_VERSION             "2020-07-06")
