@@ -1,6 +1,12 @@
 Release Notes - Clusterd
 -----------------------------------------------
 
+Changes in master
+-----------------------------------------------
+
+  * Update zookeeper client to version 3.9.2.
+
+
 Release Notes - Clusterd - Version 1.11.0-0.5.0
 -----------------------------------------------
 This release contains the following highlights:
